--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 axum = "0.8.4"
 serde_json = "1.0.140"
 tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
+sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
+dotenv = "0.15.0"
