--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ serde_json = "1.0.140"
 tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
 sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
 dotenv = "0.15.0"
+serde = "1.0.219"
