--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
 sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
 dotenv = "0.15.0"
 serde = "1.0.219"
+async-trait = "0.1.88"
